--- a/content/3_konzept/table/auswertung_tran.tex
+++ b/content/3_konzept/table/auswertung_tran.tex
@@ -2,7 +2,7 @@
      \centering
      \caption{Auswertung Messungen Translation}
      \label{tab:auswertung_tran}
-     \begin{tabularx}{\textwidth}{|X|l|l|l|l|} 
+     \begin{tabularx}{\textwidth}{|X|r|r|r|r|} 
 		\hline
 		\rowcolor{bfhblue}
 		\textcolor{white}{Messung} & \textcolor{white}{Absoluter Fehler} & \textcolor{white}{Relativer Fehler} & \textcolor{white}{Mittelwert}  & \textcolor{white}{Standardabweichung}\\
