--- a/content/3_konzept/table/messmittel.tex
+++ b/content/3_konzept/table/messmittel.tex
@@ -1,4 +1,4 @@
-\begin{table}[htbp]
+\begin{table}[t]
      \centering
      \caption{Messmittelliste Verifikation Translation}
      \label{tab:messmittel_translation}
